# sid

./: Cargo.toml  Justfile  README.md  perfect_hash.py
cli/: Cargo.toml
cli/src/: main.rs
encode/: Cargo.toml  Justfile
encode/src/: error.rs  lib.rs
oid/: Cargo.toml  Justfile
oid-pg/: Cargo.toml  Justfile  oid_pg.control
oid-pg/src/: lib.rs
oid/src/: error.rs  label.rs  lib.rs
pg/: Cargo.toml  Justfile  sid.control  sid_pg.control
pg/sql/: sid.sql
pg/src/: lib.rs
sid/: Cargo.toml
sid/src/: label.rs  lib.rs  monotonic.rs  serde.rs  sqlx.rs
sid/src/sqlx/: uuid.rs
src/: lib.rs
