[workspace]
resolver = "2"
members = [
    "cli",
    "sid",
    "pg",
    "encode",
]

[workspace.dependencies]
kurtbuilds_sid = { path = "sid" }
# These profiles come from sid-pg. Not touching them for now.
[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
