[package]
name = "sid-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sid"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.2.2", features = ["derive"] }
sid2 = { path = "../sid", features = ["uuid"] }
uuid = "1.3.1"
