[package]
name = "sid-cli"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A command line tool for generating sids and converting to/from UUIDs."

[[bin]]
name = "sid"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.2.2", features = ["derive"] }
sid2 = { path = "../sid", features = ["uuid"] }
uuid = "1.3.1"
