[package]
name = "sid-cli"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A command line tool for generating sids and converting to/from UUIDs."

[[bin]]
name = "sid"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
sid2 = { path = "../sid", features = ["uuid"], version = "0.4.0" }
uuid = "1"
