[package]
name = "sid-encode"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Use the `sid2` crate. Internal crate for encoding/decoding sid strings."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.5"
