[package]
name = "oid2"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "An id schema that is compatible with uuid, lexicographcally sorted (won't explode database indexes), readable, and double-click-copyable."

[lib]
name = "oid"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["rand", "chrono"]

[dependencies]
rand = { version = "0.8.5", optional = true }
sqlx = { version = "0.6.3", optional = true, features = ["runtime-tokio-rustls"] }
uuid = { version = "1.3.1", optional = true }
chrono = { version = "0.4.24", optional = true }
time = { version = "0.3.20", optional = true }
oid-encode = { path = "../encode" }