[package]
name = "sid2"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Id schema that is: 128-bit (uuid compatible); sorted (won't explode database indexes); random (gen anywhere); readable (has object type and a \"short\" segment); and highlights on double click. Includes postgres extension."

[lib]
name = "sid"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["rand"]

[dependencies]
rand = { version = "0.8.5", optional = true }
sqlx = { version = "0.6.3", optional = true, features = ["runtime-tokio-rustls"] }
uuid = { version = "1.3.1", optional = true }
sid-encode = { path = "../encode", version = "0.1.0" }