[package]
name = "kurtbuilds_sid"
version = "0.5.1"
edition = "2021"
license = "MIT"
description = "Id schema that is: 128-bit (uuid compatible); sorted (won't explode database indexes); random (gen anywhere); readable (has object type and a \"short\" segment); and highlights on double click. Includes postgres extension."

[lib]
name = "sid"
path = "src/lib.rs"

[features]
default = ["rand"]
sqlx = ["uuid", "dep:sqlx"]

[dependencies]
rand = { version = "0.8.5", optional = true }
sqlx = { version = "0.8.1", optional = true, features = ["postgres", "uuid"] }
uuid = { version = "1", optional = true }
sid-encode = { path = "../encode", version = "0.2.0" }
serde = { version = "1.0.166", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
tsify = "0.4.5"
wasm-bindgen = "0.2.87"

[dev-dependencies]
serde_json = "1.0.107"
